# FlavorOS_1.5

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  TODOS.md  deploy-vps.sh  docker-compose.yml  package.json  pnpm-lock.yaml
services/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: README.md  env.py
services/api/alembic/versions/: 0006_client_contexts.py  0007_provider_conn_context_fk_unique.py  0008_invite_tokens.py  20260515_0001_initial_tenants_users_profiles.py  20260518_0002_mvp_models.py  20260518_0003_provider_onboarding_metadata.py  20260519_0004_agent_ingest_records.py  20260520_0005_outbound_actions.py  20260521_0006_phase2_completion.py  20260521_0007_pac_ptq.py  20260522_0008_outbound_scheduled_send.py  20260523_0009_client_dna_candidates.py
services/api/app/: agent_context.py  config.py  database.py  deps.py  executor.py  llm.py  main.py  models.py  onboarding.py  schemas.py  seed.py  universe_registry.py
services/api/app/adapters/: __init__.py  (+4 more)
services/api/deploy/: .env.production.example  flavoros-api.service  hostinger-runbook.md
services/api/scripts/: dispatch_outbound_due.py
services/api/tests/: conftest.py  test_adapters.py  test_approvals_decide.py  test_artifact_meta.py  test_auth_invites.py  test_client_onboarding_skill.py  test_client_universe.py  test_client_universe_service.py  test_gbrain_adapter.py  test_health.py  test_onboarding_composio.py  test_outbound_actions.py  test_outbound_schedule.py  test_provider_first_sync.py  test_seed.py  test_tenant_isolation.py
(+745 files in other folders)
