[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flavoros-api"
version = "0.1.0"
description = "FlavorOS API — FastAPI MVP slice"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.32.0,<1",
  "sqlalchemy>=2.0.36,<3",
  "psycopg[binary]>=3.2.3,<4",
  "alembic>=1.14.0,<2",
  "pydantic-settings>=2.6.0,<3",
  "email-validator>=2.2.0,<3",
  "python-jose[cryptography]>=3.3.0,<4",
  "passlib[bcrypt]>=1.7.4,<2",
  "bcrypt>=4.0.0,<5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0,<1",
  "httpx>=0.27.0,<1",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Stay compatible with Python 3.9 (no PEP 604 `X | Y` in source).
ignore = ["UP007", "UP035", "UP037", "UP045"]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["I001"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
